@@ -1,6 +1,7 @@
 debootstick (2.6) unpublished; urgency=medium
 
   * Fix support for migrating to NVMe devices (thanks to F.Lavratti)
+  * Installer-mode: generic disk detection with lsblk
 
 debootstick (2.5) unstable; urgency=medium
 
